nasa api deleted

--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -23,7 +23,8 @@
     </div>
     <div class="row">
       <div class="col-md-6 offset-md-3">
-        <img class="weather-img img-fluid" src="<%= imageURL %>" alt="<%= description %>">
+        <img class="weather-img img-fluid" src="<%= weatherImageUrl %>" alt="<%= description %>">
+
       </div>
     </div>
     <div class="row">
